--- a/index.html
+++ b/index.html
@@ -2,29 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="OncleSam">
+    <meta name="author" content="onclesam56">
     <meta name="description" content="A website where i log 
     everything i learn about codng/programming">
     <meta name="keywords" content="log, learn, everything">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>onclesam56_'s code learning log</title>
+    <title>OncleSam's Programming and coding log</title>
 </head>
 <body>
-    <div id="A">
-    <h1>Welcome to my log website!</h1>
-    <h2>Description:</h2>
-    <p id="a">On this website i log <em>everything</em> i learn about coding/programming.</p>
-    </div>
+        <div id="A">
+        <h1>Welcome to my log website!</h1>
+        <h2>Description:</h2>
+        <p id="a">On this website i log <em>everything</em> i learn about coding/programming.</p>
+        </div>
     <hr>
     <br>
-    <div id="B">
-    <h2>Day 1:</h2>
-    <p id="b">Today i learned about the <u id="bc">&lt;meta&gt;</u> and <u id="bc">&lt;html lang="xx"&gt;</u> stuff in html.</p>
-    <p>This makes it so if people inspect my website they can see what</p>
-    <p>charset and language i used to make the website pluss who wrote the</p>
-    <p>code, a description of the website, and some key words to the</p>
-    <p>website.</p>
-     <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
-    </div>
+        <div id="B">
+        <h2>Day 1:</h2>
+        <p id="b">Today i learned about the <u id="bc">&lt;meta&gt;</u> and <u id="bc">&lt;html lang="xx"&gt;</u> stuff in html.</p>
+        <p>This makes it so if people inspect my website they can see what</p>
+        <p>charset and language i used to make the website pluss who wrote the</p>
+        <p>code, a description of the website, and some key words to the</p>
+        <p>website.</p>
+        <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
+        </div>
+    <br>
+        <div id="C">
+        <p>Day 2</p>
+        </div>
 </body>
 </html> 
