--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <hr>
     <br>
         <div id="B">
+            <h2>Info</h2>
+        </div>
+        <div id="C">
         <h2>Day 1:</h2>
-        <p id="b">Today i learned about the <u id="bc">&lt;meta&gt;</u> and <u id="bc">&lt;html lang="xx"&gt;</u> stuff in html.</p>
+        <p id="c">Today i learned about the <strong>&lt;meta&gt;</strong> and <strong>&lt;html lang="xx"&gt;</strong> stuff in html.</p>
         <p>This makes it so if people inspect my website they can see what</p>
         <p>charset and language i used to make the website pluss who wrote the</p>
         <p>code, a description of the website, and some key words to the</p>
@@ -27,8 +30,9 @@
         <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
         </div>
     <br>
-        <div id="C">
-        <p>Day 2</p>
+        <div id="D">
+        <h2>Day 2</h2>
+        <p>Coming soon!</p>
         </div>
 </body>
 </html> 
