--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <meta name="description" content="A website where i log 
     everything i learn about codng/programming">
     <meta name="keywords" content="log, learn, everything">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>OncleSam's Programming and coding log</title>
 </head>
 <body>
+        <div class="pc">
         <div id="A">
-        <h1>Welcome to my log website!</h1>
-        <h2>Description:</h2>
-        <p id="a">On this website i log <em>everything</em> i learn about coding/programming.</p>
+            <h1>Welcome to my log website!</h1>
+            <h2>Description:</h2>
+                <p>On this website i log <em>everything</em> i learn about coding/programming.</p>
         </div>
     <hr>
     <br>
@@ -21,18 +23,46 @@
             <h2>Info</h2>
         </div>
         <div id="C">
-        <h2>Day 1:</h2>
-        <p id="c">Today i learned about the <strong>&lt;meta&gt;</strong> and <strong>&lt;html lang="xx"&gt;</strong> stuff in html.</p>
-        <p>This makes it so if people inspect my website they can see what</p>
-        <p>charset and language i used to make the website pluss who wrote the</p>
-        <p>code, a description of the website, and some key words to the</p>
-        <p>website.</p>
-        <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
+            <h2>Day 1:</h2>
+                <p>Today i learned about the <strong>&lt;meta&gt;</strong> and <strong>&lt;html lang="xx"&gt;</strong> stuff in html.</p>
+                <p>This makes it so if people inspect my website they can see what</p>
+                <p>charset and language i used to make the website pluss who wrote the</p>
+                <p>code, a description of the website, and some key words to the</p>
+                <p>website.</p>
+          <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
         </div>
     <br>
         <div id="D">
-        <h2>Day 2</h2>
-        <p>Coming soon!</p>
+            <h2>Day 2</h2>
+                <p>Coming soon!</p>
+        </div>
+        </div>
+
+        <div class="phone">
+        <div id="a">
+            <h1>Welcome to my log website!</h1>
+            <h2>Description:</h2>
+                <p>On this website i log <em>everything</em> i learn about coding/programming.</p>
+        </div>
+    <hr>
+    <br>
+        <div id="b">
+            <h2>Info</h2>
+        </div>
+        <div id="c">
+            <h2>Day 1:</h2>
+                <p>Today i learned about the <strong>&lt;meta&gt;</strong> and <strong>&lt;html lang="xx"&gt;</strong> stuff in html.</p>
+                <p>This makes it so if people inspect my website they can see what</p>
+                <p>charset and language i used to make the website pluss who wrote the</p>
+                <p>code, a description of the website, and some key words to the</p>
+                <p>website.</p>
+          <img src="meta.png" alt="Picture of the &lt;meata&gt; stuff" width="400">
+        </div>
+    <br>
+        <div id="d">
+            <h2>Day 2</h2>
+                <p>Coming soon!</p>
+        </div>
         </div>
 </body>
-</html> 
+</html>
